--- a/app/src/main/res/layout/activity_pokedex.xml
+++ b/app/src/main/res/layout/activity_pokedex.xml
@@ -7,11 +7,14 @@
     tools:context=".PokedexActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_pokemon_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        tools:itemCount="10"
+        tools:listitem="@layout/item_pokemon"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
