--- a/app/src/main/res/layout/item_pokemon.xml
+++ b/app/src/main/res/layout/item_pokemon.xml
@@ -30,12 +30,12 @@
         app:layout_constraintEnd_toStartOf="@+id/gl_end"
         app:layout_constraintStart_toStartOf="@+id/gl_start"
         app:layout_constraintTop_toTopOf="parent"
-        app:cardElevation="16dp"
-        tools:layout_height="100dp">
+        app:cardElevation="16dp">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_card_pokemon"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:minHeight="100dp">
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/gl_card_pokemon_start"
                 android:layout_width="wrap_content"
@@ -59,7 +59,7 @@
                 app:layout_constraintStart_toStartOf="@+id/gl_card_pokemon_start"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintWidth_percent="0.2"
-                android:src="@drawable/pokeball"
+                tools:src="@drawable/pokeball"
                 />
 
             <TextView
